# visual-servoing

./: README.md
LightGlue/: package.xml  setup.cfg  setup.py
Universal_Robots_ROS2_Driver/own_ur_moveit_config/: CMakeLists.txt  package.xml
Universal_Robots_ROS2_Driver/own_ur_moveit_config/launch/: ur_moveit.launch.py
Universal_Robots_ROS2_Driver/own_ur_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
Universal_Robots_ROS2_Driver/own_ur_robot_driver/: CMakeLists.txt  package.xml
Universal_Robots_ROS2_Driver/own_ur_robot_driver/launch/: ur_control.launch.py
assembling_task_board/: package.xml  setup.cfg  setup.py
assembling_task_board/Task Board information/Camera Parameters/: Camera.yaml
assembling_task_board/Task Board information/IK solutions/: IK solutions.yaml
assembling_task_board/Task Board information/Object Information/: Object Information.yaml
assembling_task_board/functions/: calculate_camera_pose.py
assembling_task_board/launch/: combine_launch.py  combine_launch_sim.py
assembling_task_board/src/: calculatingOffset_node.py  controlSwitcher_node.py  controlSwitcher_sim_node.py  driveToInputPose_node.py  examineTrajectories_node.py  gripper_node.py  lightGlue_node.py  main_node.py  simulatingPathes_node.py  takeImages_node.py  twistPublisher_node.py
own_ur_description_2/: CMakeLists.txt  package.xml
own_ur_description_2/config/: initial_positions.yaml
own_ur_description_2/config/ur5e/: visual_parameters.yaml
own_ur_description_2/launch/: view_ur.launch.py
own_ur_description_2/meshes/: FinRayGripper.stl
own_ur_description_2/urdf/: camera_gazebo.xacro  ieg55.urdf.xacro  ur.urdf.xacro  ur_macro.xacro
own_ur_description_2/urdf/inc/: ur_transmissions.xacro
own_ur_simulation_gz/: CMakeLists.txt  package.xml
own_ur_simulation_gz/config/: ur_controllers.yaml
own_ur_simulation_gz/gazebo_ign_world/: BNC_Male.dae  BNC_Male.stl  BNC_Male_collision.stl  Greifer_und_Kamera.stl  KET16_Square.dae  KET16_Square.stl  RGOCG-16.stl  RGOCG16.dae  Unterlage Bauteile.stl  Unterlage Bauteile_blender.dae  Unterlage Bauteile_blender.stl  gazebo_world.sdf  model.config
own_ur_simulation_gz/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
trajectory_planning/: CMakeLists.txt  package.xml
trajectory_planning/src/: trajectory_planning_node.cpp  trajectory_planning_sim_node.cpp
yolo-training/: Train_YOLOV8.py
yolo-training/data/: labels.cache
yolo-training/data/labels/: 10.3_objects_0.txt  10.3_objects_1.txt  10.3_objects_10.txt  10.3_objects_11.txt  10.3_objects_12.txt  10.3_objects_13.txt  10.3_objects_14.txt  10.3_objects_15.txt  10.3_objects_16.txt  10.3_objects_17.txt  10.3_objects_18.txt  10.3_objects_19.txt  10.3_objects_2.txt  10.3_objects_20.txt  10.3_objects_21.txt  10.3_objects_3.txt  10.3_objects_4.txt  10.3_objects_5.txt  10.3_objects_6.txt  10.3_objects_7.txt  10.3_objects_8.txt  10.3_objects_9.txt  12.3_USB_Male_0.txt  12.3_USB_Male_1.txt  12.3_USB_Male_10.txt  12.3_USB_Male_11.txt  12.3_USB_Male_12.txt  12.3_USB_Male_13.txt  12.3_USB_Male_14.txt  12.3_USB_Male_15.txt  12.3_USB_Male_16.txt  12.3_USB_Male_17.txt  12.3_USB_Male_18.txt  12.3_USB_Male_19.txt  12.3_USB_Male_2.txt  12.3_USB_Male_20.txt  12.3_USB_Male_21.txt  12.3_USB_Male_22.txt  12.3_USB_Male_23.txt  12.3_USB_Male_24.txt  (+787 more)
yolo/yolov11/: CMakeLists.txt  package.xml
yolo/yolov11/launch/: launch_YOLO_node.launch.py
yolo/yolov11/scripts/: YOLO_node.py  YOLO_sim_node.py
yolo/yolov11/scripts/active_Model/: active.pt
yolo/yolov11_msgs/: CMakeLists.txt  package.xml
