<?xml version="1.0"?>
<package format="3">
  <name>lightglue</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper for LightGlue</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

