<?xml version="1.0"?>
<package format="3">
  <name>assembling_task_board</name>
  <version>0.0.0</version>
  <description>ROS 2 package for camera pose estimation using deep learning.</description>
  <maintainer email="robotmania@todo.todo">robotmania</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>opencv_python</exec_depend>


  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>moveit_commander</exec_depend> <!-- Add this line -->
  <depend>tf2_ros</depend>
<depend>tf2_geometry_msgs</depend>
<depend>tf2_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

