<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alex@todo.todo">alex</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool and build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
    <build_depend>visp</build_depend>
  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
   <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  
  <depend>moveit_ros_move_group</depend>
  
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Dependencies for message generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

